<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startDownload"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/button"
            android:layout_width="218dp"
            android:layout_height="79dp"
            android:layout_marginStart="96dp"
            android:layout_marginTop="384dp"
            android:onClick="startDownload"
            android:text="@string/pd_act_btn_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editUrlPDF2"
            android:layout_width="366dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="17dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textUri"
            android:minHeight="48dp"
            android:text="@string/pd_act_txt2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editUrlPDF1"
            android:layout_width="364dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textUri"
            android:minHeight="48dp"
            android:text="@string/pd_act_txt1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:labelFor="@id/editUrlPDF1"
            android:text="@string/pd_act_lbl1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="168dp"
            android:labelFor="@id/editUrlPDF3"
            android:text="@string/pd_act_lbl3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="304dp"
            android:labelFor="@id/editUrlPDF5"
            android:text="@string/pd_act_lbl5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editUrlPDF4"
            android:layout_width="368dp"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="260dp"
            android:layout_marginEnd="17dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textUri"
            android:minHeight="48dp"
            android:text="@string/pd_act_txt4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="96dp"
            android:labelFor="@id/editUrlPDF2"
            android:text="@string/pd_act_lbl2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="232dp"
            android:labelFor="@id/editUrlPDF4"
            android:text="@string/pd_act_lbl4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editUrlPDF3"
            android:layout_width="366dp"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="188dp"
            android:layout_marginEnd="17dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textUri"
            android:minHeight="48dp"
            android:text="@string/pd_act_txt3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editUrlPDF5"
            android:layout_width="368dp"
            android:layout_height="47dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="328dp"
            android:layout_marginEnd="23dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textUri"
            android:minHeight="48dp"
            android:text="@string/pd_act_txt5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="368dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="484dp"
            android:layout_marginEnd="29dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/status"
            android:layout_width="367dp"
            android:layout_height="160dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="516dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:gravity="start|top"
            android:scrollbars="vertical"
            android:inputType="none"
            android:focusable="false"
            android:focusableInTouchMode="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAutofill="no"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>